Add workshop schedule

--- a/index.html
+++ b/index.html
@@ -127,6 +127,134 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
 <li> <font size="3" color="black"><b><a href="https://www.ihmc.us/groups/bdorr/"> Bonnie J. Dorr</a>, Florida Institute for Human and Machine Cognition. <a href="invited_abstracts/dorr_abstract.html">Talk Abstract</a>. <a href="invited_bios/dorr_bio.html">Speaker Bio</a>.</b></font></li>
 </ul>
 
+
+<a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+
+<a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Schedule (EST)</h2>
+<table class="table" style="width:100%">
+      <tr class="info">
+        <td>8:00-9:00</td>
+        <td><strong>QA/Poster</strong></td> 
+        <td>Workshop Organizers</td>
+      </tr>
+  
+      <tr class="info">
+        <td>9:00-9:10</td>
+        <td><strong>Opening Talk </strong></td> 
+        <td>Parisa Kordjamshidi</td>
+      </tr>
+
+      <tr class="success">
+        <td>9:10-10:00</td>
+        <td><strong>Invited Talk</strong></td> 
+        <td>James Pustejovsky</td>
+      </tr>
+
+      <tr class="success">
+        <td>10:00-10:56</td>
+        <td><strong>Paper Presentations</strong></td>                      
+        <td></td>
+      </tr>
+
+      <tr>
+        <td>10:56-11:05</td>
+        <td><strong>Break</strong></td> 
+        <td> </td>
+      </tr>
+
+      <tr class="success">
+        <td>11:05-11:55</td>
+        <td><strong>Invited Talk</strong></td>
+        <td>Julia Hockenmeir</td>
+      </tr>
+
+      <tr class="success">
+        <td>11:55-12:51</td>
+        <td><strong>Paper Presentations</strong></td>
+        <td></td>
+      </tr>
+
+      <tr>
+        <td>12:51-1:00</td>
+        <td><strong>Break</strong></td> 
+        <td> </td>
+      </tr>
+
+      <tr class="success">
+        <td>1:00-1:50</td>
+        <td><strong>Invited Talk</strong></td>
+        <td>Yoav Artzi</td>
+      </tr>
+
+      <tr class="success">
+        <td>1:50-2:46</td>
+        <td><strong>Paper Presentations</strong></td>
+        <td></td>
+      </tr>
+
+      <tr class="info">
+        <td>2:46-3:45</td>
+        <td><strong>QA/Poster</strong></td>
+        <td>Workshop Organizers</td>
+      </tr>
+
+      <tr class="success">
+        <td>3:45-4:35</td>
+        <td><strong>Invited Talk</strong></td>
+        <td>Bonnie J. Dorr</td>
+      </tr>
+
+      <tr class="success">
+        <td>4:35-5:31</td>
+        <td><strong>Paper Presentations</strong></td>
+        <td></td>
+      </tr>
+
+      <tr>
+        <td>5:31-5:45</td>
+        <td><strong>Break</strong></td>
+        <td> </td>
+      </tr>
+
+      <tr class="success">
+        <td>5:45-6:35</td>
+        <td><strong>Invited Talk</strong></td>
+        <td>Douwe Kiela</td>
+      </tr>
+
+      <tr class="success">
+        <td>6:35-7:03</td>
+        <td><strong>Paper Presentations</strong></td>
+        <td></td>
+      </tr>
+
+      <tr class="info">
+        <td>7:03-8:00</td>
+        <td><strong>Panel Discussion</strong></td>
+        <td></td>
+      </tr>
+
+      <tr class="info">
+        <td>8:00-9:00</td>
+        <td><strong>QA/Poster</strong></td>
+        <td>Workshop Organizers</td>
+      </tr>
+
+    </table>
+
+
+
+<h2>Accepted Papers<a href="https://aclanthology.info/volumes/proceedings-of-the-third-international-workshop-on-spatial-language-understanding"> (Proceedings)</a></h2>
+ <ul>
+  <li><b><i>An Element-wise Visual-enhanced BiLSTM-CRF Model for Location Name Recognition</i></b>, Takuya Komada and Takashi Inui.</li>
+  <li><b><i>BERT-based Spatial Information Extraction</i></b>, Hyeong Jin Shin, Jeong Yeon Park, Dae Bum Yuk and Jae Sung Lee.</li>
+  <li><b><i>A Cognitively Motivated Approach to Spatial Information Extraction</i></b>, Chao Xu, Emmanuelle-Anna Dietz Saldanha, Dagmar Gromann and Beihai Zhou.</li>
+  <li><b><i>They are not all alike: answering different spatial questions requires different grounding strategies</i></b>, Alberto Testoni, Claudio Greco, Tobias Bianchi, Mauricio Mazuecos, Agata Marcante, Luciana Benotti and Raffaella Bernardi.</li>
+  <li><b><i>Categorisation, Typicality and Object-Specific Features in Spatial Referring Expressions</i></b>, Adam Richard-Bollans, Anthony Cohn and Lucía Gómez Álvarez.</li>
+  <li><b><i>A Hybrid Deep Learning Approach for Spatial Trigger Extraction from Radiology Reports</i></b>, Surabhi Datta and Kirk Roberts.</li>
+  <li><b><i>Retouchdown: Releasing Touchdown on StreetLearn as a Public Resource for Language Grounding Tasks in Street View</i></b>, Harsh Mehta, Yoav Artzi, Jason Baldridge, Eugene Ie and Piotr Mirowski.</li>
+ </ul>
+
 <a id="submission-info" class="anchor" href="#submission-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 <h2>Submissions</h2>
 We encourage contributions with technical papers (EMNLP style, 8 pages without references) or shorter papers on position statements describing previously unpublished work or demos (EMNLP style, 4 pages maximum). EMNLP Style files are available <a href="https://2020.emnlp.org/files/emnlp2020-templates.zip"> [Here]</a>. Please make submissions via Softconf <a href="https://www.softconf.com/emnlp2020/spatial-language/">[Here]</a>. 
@@ -139,23 +267,6 @@ We encourage contributions with technical papers (EMNLP style, 8 pages without r
   <li>Notification: Oct 1, 2020</li>
   <li>Camera Ready deadline: Oct 12, 2020</li>
   <li>Workshop Day: November 19/20, 2020</li>
- </ul>
- 
-<a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-
-<a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Schedule
-<a href="https://aclanthology.info/volumes/proceedings-of-the-third-international-workshop-on-spatial-language-understanding"> (Proceedings)</a>
-</h2>
-
-<h2>Accepted Papers</h2>
- <ul>
-  <li><b><i>An Element-wise Visual-enhanced BiLSTM-CRF Model for Location Name Recognition</i></b>, Takuya Komada and Takashi Inui.</li>
-  <li><b><i>BERT-based Spatial Information Extraction</i></b>, Hyeong Jin Shin, Jeong Yeon Park, Dae Bum Yuk and Jae Sung Lee.</li>
-  <li><b><i>A Cognitively Motivated Approach to Spatial Information Extraction</i></b>, Chao Xu, Emmanuelle-Anna Dietz Saldanha, Dagmar Gromann and Beihai Zhou.</li>
-  <li><b><i>They are not all alike: answering different spatial questions requires different grounding strategies</i></b>, Alberto Testoni, Claudio Greco, Tobias Bianchi, Mauricio Mazuecos, Agata Marcante, Luciana Benotti and Raffaella Bernardi.</li>
-  <li><b><i>Categorisation, Typicality and Object-Specific Features in Spatial Referring Expressions</i></b>, Adam Richard-Bollans, Anthony Cohn and Lucía Gómez Álvarez.</li>
-  <li><b><i>A Hybrid Deep Learning Approach for Spatial Trigger Extraction from Radiology Reports</i></b>, Surabhi Datta and Kirk Roberts.</li>
-  <li><b><i>Retouchdown: Releasing Touchdown on StreetLearn as a Public Resource for Language Grounding Tasks in Street View</i></b>, Harsh Mehta, Yoav Artzi, Jason Baldridge, Eugene Ie and Piotr Mirowski.</li>
  </ul>
 
 
