Update date of the workshop, remove physical location of workshop, etc

--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@ href="stylesheets/github-light.css" media="screen">
 
       <h1 class="project-name">SpLU 2020</h1>
       <h2 class="project-tagline">Third International Workshop on Spatial Language Understanding</h2>
-<h2  class="project-tagline">In conjunction with The Conference on Empirical Methods in Natural Language Processing 2020 <a href="http://www.wikicfp.com/cfp/program?id=883">(EMNLP 2020)</a>, November 19/20, 2020, Barceló Bávaro Convention Centre, Dominican Republic. 
-<br>
-<br>
-Room: TBA
-<br>
+<h2  class="project-tagline">In conjunction with The Conference on Empirical Methods in Natural Language Processing 2020 <a href="http://www.wikicfp.com/cfp/program?id=883">(EMNLP 2020)</a>. 
+<br><br>
+Date: November 19, 2020
+<br><br>
 <a href="https://aclanthology.info/volumes/proceedings-of-the-third-international-workshop-on-spatial-language-understanding"> (Proceedings)</a>
 </h2>
 <br>
@@ -266,7 +265,7 @@ We encourage contributions with technical papers (EMNLP style, 8 pages without r
   <li>Submission Deadline: <strike>August 15</strike> August 21, 2020</li>
   <li>Notification: Oct 1, 2020</li>
   <li>Camera Ready deadline: Oct 12, 2020</li>
-  <li>Workshop Day: November 19/20, 2020</li>
+  <li>Workshop Day: November 19, 2020</li>
  </ul>
 
 
