Create a tab for accepted papers

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ Date: November 19, 2020
               <li class="active"><a href="#topics">Topics</a></a></li>
 	      <li><a href="#invitedSpeakers">Invited Speakers</a></li>
         <li><a href="#schedule">Schedule</a></li>
+	<li><a href="#accepted-papers">Accepted Papers</a></li>
 	      <li><a href="#submission-info">Submission</a></li>
          <li><a href="#important-dates">Important Dates</a></li>
 	      <!--li><a href="#demos">Demos</a></li-->
@@ -241,7 +242,7 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
     </table>
 
 
-
+<a id="accepted-papers" class="anchor" href="#accepted-papers" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 <h2>Accepted Papers<a href="https://aclanthology.info/volumes/proceedings-of-the-third-international-workshop-on-spatial-language-understanding"> (Proceedings)</a></h2>
  <ul>
   <li><b><i>An Element-wise Visual-enhanced BiLSTM-CRF Model for Location Name Recognition</i></b>, Takuya Komada and Takashi Inui.</li>
