Add non-archival papers

--- a/index.html
+++ b/index.html
@@ -254,6 +254,16 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
   <li><b><i>Retouchdown: Releasing Touchdown on StreetLearn as a Public Resource for Language Grounding Tasks in Street View</i></b>, Harsh Mehta, Yoav Artzi, Jason Baldridge, Eugene Ie and Piotr Mirowski.</li>
  </ul>
 
+
+<h2>Non-archival Submissions</h2>
+<ul>
+  <li>SpaRTQA: A Textual Question Answering Benchmark for Spatial Reasoning<br><i><font size=2>Roshanak Mirzaee, Hossein Rajaby Faghihi and Parisa Kordjamshidi</font></i></li>
+<li>Geocoding with multi-level loss for spatial language representation<br><i><font size=2>Sayali Kulkarni, Shailee Jain, Mohammad Javad Hosseini, Jason Baldridge, Eugene Ie and Li Zhang</font></i></li>
+<li>Vision-and-Language Navigation by Reasoning over Spatial Configurations<br><i><font size=2>Yue Zhang, Quan Guo and Parisa Kordjamshidi</font></i></li>
+</ul>
+</font>
+
+
 <a id="submission-info" class="anchor" href="#submission-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 <h2>Submissions</h2>
 We encourage contributions with technical papers (EMNLP style, 8 pages without references) or shorter papers on position statements describing previously unpublished work or demos (EMNLP style, 4 pages maximum). EMNLP Style files are available <a href="https://2020.emnlp.org/files/emnlp2020-templates.zip"> [Here]</a>. Please make submissions via Softconf <a href="https://www.softconf.com/emnlp2020/spatial-language/">[Here]</a>. 
