Add accepted Findings papers

--- a/index.html
+++ b/index.html
@@ -245,21 +245,36 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
 <a id="accepted-papers" class="anchor" href="#accepted-papers" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 <h2>Accepted Papers<a href="https://aclanthology.info/volumes/proceedings-of-the-third-international-workshop-on-spatial-language-understanding"> (Proceedings)</a></h2>
  <ul>
-  <li><b><i>An Element-wise Visual-enhanced BiLSTM-CRF Model for Location Name Recognition</i></b>, Takuya Komada and Takashi Inui.</li>
-  <li><b><i>BERT-based Spatial Information Extraction</i></b>, Hyeong Jin Shin, Jeong Yeon Park, Dae Bum Yuk and Jae Sung Lee.</li>
-  <li><b><i>A Cognitively Motivated Approach to Spatial Information Extraction</i></b>, Chao Xu, Emmanuelle-Anna Dietz Saldanha, Dagmar Gromann and Beihai Zhou.</li>
-  <li><b><i>They are not all alike: answering different spatial questions requires different grounding strategies</i></b>, Alberto Testoni, Claudio Greco, Tobias Bianchi, Mauricio Mazuecos, Agata Marcante, Luciana Benotti and Raffaella Bernardi.</li>
-  <li><b><i>Categorisation, Typicality and Object-Specific Features in Spatial Referring Expressions</i></b>, Adam Richard-Bollans, Anthony Cohn and Lucía Gómez Álvarez.</li>
-  <li><b><i>A Hybrid Deep Learning Approach for Spatial Trigger Extraction from Radiology Reports</i></b>, Surabhi Datta and Kirk Roberts.</li>
-  <li><b><i>Retouchdown: Releasing Touchdown on StreetLearn as a Public Resource for Language Grounding Tasks in Street View</i></b>, Harsh Mehta, Yoav Artzi, Jason Baldridge, Eugene Ie and Piotr Mirowski.</li>
+  <li>An Element-wise Visual-enhanced BiLSTM-CRF Model for Location Name Recognition<br><i><font size=2>Takuya Komada and Takashi Inui</font></i></li>
+  <li>BERT-based Spatial Information Extraction<br><i><font size=2>Hyeong Jin Shin, Jeong Yeon Park, Dae Bum Yuk and Jae Sung Lee</font></i></li>
+  <li>A Cognitively Motivated Approach to Spatial Information Extraction<br><i><font size=2>Chao Xu, Emmanuelle-Anna Dietz Saldanha, Dagmar Gromann and Beihai Zhou</font></i></li>
+  <li>They are not all alike: answering different spatial questions requires different grounding strategies<br><i><font size=2>Alberto Testoni, Claudio Greco, Tobias Bianchi, Mauricio Mazuecos, Agata Marcante, Luciana Benotti and Raffaella Bernardi</font></i></li>
+  <li>Categorisation, Typicality and Object-Specific Features in Spatial Referring Expressions<br><i><font size=2>Adam Richard-Bollans, Anthony Cohn and Lucía Gómez Álvarez</font></i></li>
+  <li>A Hybrid Deep Learning Approach for Spatial Trigger Extraction from Radiology Reports<br><i><font size=2>Surabhi Datta and Kirk Roberts</font></i></li>
+  <li>Retouchdown: Releasing Touchdown on StreetLearn as a Public Resource for Language Grounding Tasks in Street View<br><i><font size=2>Harsh Mehta, Yoav Artzi, Jason Baldridge, Eugene Ie and Piotr Mirowski</font></i></li>
  </ul>
 
 
-<h2>Non-archival Submissions</h2>
+<h2>Accepted Non-archival Submissions</h2>
 <ul>
   <li>SpaRTQA: A Textual Question Answering Benchmark for Spatial Reasoning<br><i><font size=2>Roshanak Mirzaee, Hossein Rajaby Faghihi and Parisa Kordjamshidi</font></i></li>
 <li>Geocoding with multi-level loss for spatial language representation<br><i><font size=2>Sayali Kulkarni, Shailee Jain, Mohammad Javad Hosseini, Jason Baldridge, Eugene Ie and Li Zhang</font></i></li>
 <li>Vision-and-Language Navigation by Reasoning over Spatial Configurations<br><i><font size=2>Yue Zhang, Quan Guo and Parisa Kordjamshidi</font></i></li>
+</ul>
+</font>
+
+
+<h2>Accepted Findings Submissions</h2>
+<ul>
+  <li>Language-Conditioned Feature Pyramids for Visual Selection Tasks<br><i><font size=2>Taichi Iki and Akiko Aizawa</font></i></li>
+<li>A Linguistic Analysis of Visually Grounded Dialogues Based on Spatial Expressions<br><i><font size=2>Takuma Udagawa, Takato Yamazaki and Akiko Aizawa</font></i></li>
+<li>Visually-Grounded Planning without Vision: Language Models Infer Detailed Plans
+from High-level Instructions<br><i><font size=2>Peter A. Jansen</font></i></li>
+<li>Decoding Language Spatial Relations to 2D Spatial Arrangements<br><i><font size=2>Gorjan Radevski, Guillem Collell, Marie-Francine Moens and Tinne Tuytelaars</font></i></li>
+<li>LiMiT: The Literal Motion in Text Dataset<br><i><font size=2>Irene Manotas, Ngoc Phuoc An Vo and Vadim Sheinin</font></i></li>
+<li>ARRAMON: A Joint Navigation-Assembly Instruction Interpretation Task in Dynamic Environments<br><i><font size=2>Hyounghun Kim, Abhay Zala, Graham Burri, Hao Tan and Mohit Bansal</font></i></li>
+<li>Robust and Interpretable Grounding of Spatial References with Relation Networks<br><i><font size=2>Tsung-Yen Yang, Andrew S. Lan and Karthik Narasimhan</font></i></li>
+<li>RMM: A Recursive Mental Model for Dialogue Navigation<br><i><font size=2>Homero Roman Roman, Yonatan Bisk, Jesse Thomason, Asli Celikyilmaz and Jianfeng Gao</font></i></li>
 </ul>
 </font>
 
