--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
 
       <tr class="success">
         <td>10:00-10:56</td>
-        <td><strong>Paper Presentations</strong></td>                      
+        <td><strong>Paper Presentations (1,2,3,11)</strong></td>                      
         <td></td>
       </tr>
 
@@ -169,7 +169,7 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
 
       <tr class="success">
         <td>11:55-12:51</td>
-        <td><strong>Paper Presentations</strong></td>
+        <td><strong>Paper Presentations (4,5,12,13)</strong></td>
         <td></td>
       </tr>
 
@@ -187,7 +187,7 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
 
       <tr class="success">
         <td>1:50-2:46</td>
-        <td><strong>Paper Presentations</strong></td>
+        <td><strong>Paper Presentations (6,7,8,14)</strong></td>
         <td></td>
       </tr>
 
@@ -205,7 +205,7 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
 
       <tr class="success">
         <td>4:35-5:31</td>
-        <td><strong>Paper Presentations</strong></td>
+        <td><strong>Paper Presentations (9,10,15,16)</strong></td>
         <td></td>
       </tr>
 
@@ -223,7 +223,7 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
 
       <tr class="success">
         <td>6:35-7:03</td>
-        <td><strong>Paper Presentations</strong></td>
+        <td><strong>Paper Presentations (17,18)</strong></td>
         <td></td>
       </tr>
 
@@ -244,7 +244,7 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
 
 <a id="accepted-papers" class="anchor" href="#accepted-papers" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 <h2>Accepted Papers<a href="https://aclanthology.info/volumes/proceedings-of-the-third-international-workshop-on-spatial-language-understanding"> (Proceedings)</a></h2>
- <ul>
+ <ol>
   <li>An Element-wise Visual-enhanced BiLSTM-CRF Model for Location Name Recognition<br><i><font size=2>Takuya Komada and Takashi Inui</font></i></li>
   <li>BERT-based Spatial Information Extraction<br><i><font size=2>Hyeong Jin Shin, Jeong Yeon Park, Dae Bum Yuk and Jae Sung Lee</font></i></li>
   <li>A Cognitively Motivated Approach to Spatial Information Extraction<br><i><font size=2>Chao Xu, Emmanuelle-Anna Dietz Saldanha, Dagmar Gromann and Beihai Zhou</font></i></li>
@@ -252,20 +252,19 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
   <li>Categorisation, Typicality and Object-Specific Features in Spatial Referring Expressions<br><i><font size=2>Adam Richard-Bollans, Anthony Cohn and Lucía Gómez Álvarez</font></i></li>
   <li>A Hybrid Deep Learning Approach for Spatial Trigger Extraction from Radiology Reports<br><i><font size=2>Surabhi Datta and Kirk Roberts</font></i></li>
   <li>Retouchdown: Releasing Touchdown on StreetLearn as a Public Resource for Language Grounding Tasks in Street View<br><i><font size=2>Harsh Mehta, Yoav Artzi, Jason Baldridge, Eugene Ie and Piotr Mirowski</font></i></li>
- </ul>
+ </ol>
 
 
 <h2>Accepted Non-archival Submissions</h2>
-<ul>
+<ol start="8">
   <li>SpaRTQA: A Textual Question Answering Benchmark for Spatial Reasoning<br><i><font size=2>Roshanak Mirzaee, Hossein Rajaby Faghihi and Parisa Kordjamshidi</font></i></li>
 <li>Geocoding with multi-level loss for spatial language representation<br><i><font size=2>Sayali Kulkarni, Shailee Jain, Mohammad Javad Hosseini, Jason Baldridge, Eugene Ie and Li Zhang</font></i></li>
 <li>Vision-and-Language Navigation by Reasoning over Spatial Configurations<br><i><font size=2>Yue Zhang, Quan Guo and Parisa Kordjamshidi</font></i></li>
-</ul>
-</font>
+</ol>
 
 
 <h2>Accepted Findings Submissions</h2>
-<ul>
+<ol start="11">
   <li>Language-Conditioned Feature Pyramids for Visual Selection Tasks<br><i><font size=2>Taichi Iki and Akiko Aizawa</font></i></li>
 <li>A Linguistic Analysis of Visually Grounded Dialogues Based on Spatial Expressions<br><i><font size=2>Takuma Udagawa, Takato Yamazaki and Akiko Aizawa</font></i></li>
 <li>Visually-Grounded Planning without Vision: Language Models Infer Detailed Plans
@@ -275,8 +274,7 @@ from High-level Instructions<br><i><font size=2>Peter A. Jansen</font></i></li>
 <li>ARRAMON: A Joint Navigation-Assembly Instruction Interpretation Task in Dynamic Environments<br><i><font size=2>Hyounghun Kim, Abhay Zala, Graham Burri, Hao Tan and Mohit Bansal</font></i></li>
 <li>Robust and Interpretable Grounding of Spatial References with Relation Networks<br><i><font size=2>Tsung-Yen Yang, Andrew S. Lan and Karthik Narasimhan</font></i></li>
 <li>RMM: A Recursive Mental Model for Dialogue Navigation<br><i><font size=2>Homero Roman Roman, Yonatan Bisk, Jesse Thomason, Asli Celikyilmaz and Jianfeng Gao</font></i></li>
-</ul>
-</font>
+</ol>
 
 
 <a id="submission-info" class="anchor" href="#submission-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>
