--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Date: November 19, 2020
 	      <li><a href="#invitedSpeakers">Invited Speakers</a></li>
         <li><a href="#schedule">Schedule</a></li>
 	<li><a href="#accepted-papers">Accepted Papers</a></li>
-	      <li><a href="#submission-info">Submission</a></li>
+	      <!--<li><a href="#submission-info">Submission</a></li>-->
          <li><a href="#important-dates">Important Dates</a></li>
 	      <!--li><a href="#demos">Demos</a></li-->
 	      <!--li><a href="#panel">Panel</a></li-->
@@ -277,8 +277,8 @@ from High-level Instructions<br><i><font size=2>Peter A. Jansen</font></i></li>
 </ol>
 
 
-<a id="submission-info" class="anchor" href="#submission-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-<h2>Submissions</h2>
+<!--<a id="submission-info" class="anchor" href="#submission-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>-->
+<h2>Submission Procedure</h2>
 We encourage contributions with technical papers (EMNLP style, 8 pages without references) or shorter papers on position statements describing previously unpublished work or demos (EMNLP style, 4 pages maximum). EMNLP Style files are available <a href="https://2020.emnlp.org/files/emnlp2020-templates.zip"> [Here]</a>. Please make submissions via Softconf <a href="https://www.softconf.com/emnlp2020/spatial-language/">[Here]</a>. 
 
 <br><br><p><b>Non-Archival option:</b> EMNLP workshops are traditionally archival. To allow dual submission of work to SpLU and other conferences/journals, we are also including a non-archival track. Space permitting, these submissions will still participate and present their work in the workshop, will be hosted on the workshop website, but will not be included in the official proceedings. Please submit through softconf but indicate that this is a cross submission at the bottom of the submission form: <br> <img src="images/submission.png" alt="Submission type"></p>
