Fix Julia's last name in the schedule

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
       <tr class="success">
         <td>11:05-11:55</td>
         <td><strong>Invited Talk</strong></td>
-        <td>Julia Hockenmeir</td>
+        <td>Julia Hockenmaier</td>
       </tr>
 
       <tr class="success">
