--- a/index.html
+++ b/index.html
@@ -111,19 +111,19 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
 
 <ul>
   <li>
-   <font size="3" color="black"><b><a href="http://jamespusto.com">James Pustejovsky</a>, Brandeis University. <a href="ADD URL">Talk Abstract</a>. <a href="ADD URL">Speaker Bio</a>.</b></font></li>
+   <font size="3" color="black"><b><a href="http://jamespusto.com">James Pustejovsky</a>, Brandeis University. <a href="ADD URL">Abstract</a>. <a href="ADD URL">Bio</a>.</b></font></li>
 
 <li> 
-   <font size="3" color="black"><b><a href="https://yoavartzi.com">Yoav Artzi</a>, Cornell University. <a href="ADD URL">Talk Abstract</a>. <a href="ADD URL">Speaker Bio</a>.</b></font></li> 
+   <font size="3" color="black"><b><a href="https://yoavartzi.com">Yoav Artzi</a>, Cornell University. <a href="ADD URL">Abstract</a>. <a href="ADD URL">Bio</a>.</b></font></li> 
 
 <li>
-   <font size="3" color="black"><b><a href="http://juliahmr.cs.illinois.edu">Julia Hockenmaier</a>, University of Illinois at Urbana-Champaign. <a href="ADD URL">Talk Abstract</a>. <a href="ADD URL">Speaker Bio</a>.</b></font></li> 
+   <font size="3" color="black"><b><a href="http://juliahmr.cs.illinois.edu">Julia Hockenmaier</a>, University of Illinois at Urbana-Champaign. <a href="ADD URL">Abstract</a>. <a href="ADD URL">Bio</a>.</b></font></li> 
 
 <li> 
-   <font size="3" color="black"><b><a href="https://douwekiela.github.io">Douwe Kiela</a>, Facebook. <a href="ADD URL">Talk Abstract</a>. <a href="ADD URL">Speaker Bio</a>.</b></font></li> 
+   <font size="3" color="black"><b><a href="https://douwekiela.github.io">Douwe Kiela</a>, Facebook. <a href="ADD URL">Abstract</a>. <a href="https://slideslive.com/38940088">Talk</a>. <a href="ADD URL">Bio</a>.</b></font></li> 
 
 
-<li> <font size="3" color="black"><b><a href="https://www.ihmc.us/groups/bdorr/"> Bonnie J. Dorr</a>, Florida Institute for Human and Machine Cognition. <a href="invited_abstracts/dorr_abstract.html">Talk Abstract</a>. <a href="invited_bios/dorr_bio.html">Speaker Bio</a>.</b></font></li>
+<li> <font size="3" color="black"><b><a href="https://www.ihmc.us/groups/bdorr/"> Bonnie J. Dorr</a>, Florida Institute for Human and Machine Cognition. <a href="invited_abstracts/dorr_abstract.html">Abstract</a>. <a href="https://slideslive.com/38940089">Talk</a>. <a href="invited_bios/dorr_bio.html">Bio</a>.</b></font></li>
 </ul>
 
 
