--- a/invited_abstracts/dorr_abstract.html
+++ b/invited_abstracts/dorr_abstract.html
@@ -20,12 +20,12 @@ href="stylesheets/github-light.css" media="screen">
 <body>
 <section class="page-header">
       <h1 class="project-name">SpLU 2020 Invited Speakers</h1>
-      <h2 class="speaker">Bonnie Dorr</h2>
+      <h2 class="speaker">Bonnie J. Dorr</h2>
 </section>
 
 <section class="main-content">
 
-<h3>Abstract</h3>
+<h3>Lexical Conceptual Structure: Spatial Representations for AI Applications</h3>
 
 This talk presents a spatial representation, called lexical conceptual structure, consisting of predicates and spatially oriented arguments, and its use in AI applications.  A primary motivation for the use of this representation is its systematic mapping to syntactic structure, independent of whether the predicates represent literal (spatial) meanings or are metaphorical in nature. The representation has language-independent properties that enable its use for building lexical resources and also that support a range of multilingual applications. More recently, the representation and its associated lexical organization provides the foundation for an approach to social engineering active defense. Throughout the talk, examples are provided that illustrate a number of important properties of the representation: (1) incorporation of foundational elements of motion and location that carry over from the spatial domain to other domains; (2) compositional primitives and fields that enable the construction of new resources; and (3) language- and domain- independence that supports multilingual processing and development of new AI applications.
 
