--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
 
 <ul>
   <li>
-   <font size="3" color="black"><b><a href="http://jamespusto.com">James Pustejovsky</a>, Brandeis University. <a href="ADD URL">Abstract</a>. <a href="ADD URL">Bio</a>.</b></font></li>
+   <font size="3" color="black"><b><a href="http://jamespusto.com">James Pustejovsky</a>, Brandeis University. <a href="invited_abstracts/pustejovsky_abstract.html">Abstract</a>. <a href="https://slideslive.com/38940086">Talk</a>. <a href="invited_bios/pustejovsky_bio.html">Bio</a>.</b></font></li>
 
 <li> 
    <font size="3" color="black"><b><a href="https://yoavartzi.com">Yoav Artzi</a>, Cornell University. <a href="invited_abstracts/artzi_abstract.html">Abstract</a>. <a href="https://slideslive.com/38940090">Talk</a>. <a href="invited_bios/artzi_bio.html">Bio</a>.</b></font></li> 
