Add talk links for the non-archival papers

--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
 
 <h2>Accepted Non-archival Submissions</h2>
 <ol start="8">
-  <li>SpaRTQA: A Textual Question Answering Benchmark for Spatial Reasoning<br><i><font size=2>Roshanak Mirzaee, Hossein Rajaby Faghihi and Parisa Kordjamshidi</font></i></li>
-<li>Geocoding with multi-level loss for spatial language representation<br><i><font size=2>Sayali Kulkarni, Shailee Jain, Mohammad Javad Hosseini, Jason Baldridge, Eugene Ie and Li Zhang</font></i></li>
-<li>Vision-and-Language Navigation by Reasoning over Spatial Configurations<br><i><font size=2>Yue Zhang, Quan Guo and Parisa Kordjamshidi</font></i></li>
+  <li><b>SpaRTQA: A Textual Question Answering Benchmark for Spatial Reasoning. <a href="https://slideslive.com/38940084">Talk</a>.</b><br><i><font size=2>Roshanak Mirzaee, Hossein Rajaby Faghihi and Parisa Kordjamshidi</font></i></li>
+<li><b>Geocoding with multi-level loss for spatial language representation. <a href="https://slideslive.com/38940083">Talk</a>.</b><br><i><font size=2>Sayali Kulkarni, Shailee Jain, Mohammad Javad Hosseini, Jason Baldridge, Eugene Ie and Li Zhang</font></i></li>
+<li><b>Vision-and-Language Navigation by Reasoning over Spatial Configurations. <a href="https://slideslive.com/38940085">Talk</a>.</b><br><i><font size=2>Yue Zhang, Quan Guo and Parisa Kordjamshidi</font></i></li>
 </ol>
 
 
