Add link to the proceedings

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ href="stylesheets/github-light.css" media="screen">
 <br><br>
 Date: November 19, 2020
 <br><br>
-<a href="https://aclanthology.info/volumes/proceedings-of-the-third-international-workshop-on-spatial-language-understanding"> (Proceedings)</a>
+<a href="https://www.aclweb.org/anthology/volumes/2020.splu-1/"> (Proceedings)</a>
 </h2>
 <br>
 
@@ -243,7 +243,7 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
 
 
 <a id="accepted-papers" class="anchor" href="#accepted-papers" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-<h2>Accepted Papers<a href="https://aclanthology.info/volumes/proceedings-of-the-third-international-workshop-on-spatial-language-understanding"> (Proceedings)</a></h2>
+<h2>Accepted Papers<a href="https://www.aclweb.org/anthology/volumes/2020.splu-1/"> (Proceedings)</a></a></h2>
  <ol>
   <li><b>An Element-wise Visual-enhanced BiLSTM-CRF Model for Location Name Recognition. <a href="https://slideslive.com/38940081">Talk</a>.</b><br><i><font size=2>Takuya Komada and Takashi Inui</font></i></li>
   <li><b>BERT-based Spatial Information Extraction. <a href="https://slideslive.com/38940078">Talk</a>.</b><br><i><font size=2>Hyeong Jin Shin, Jeong Yeon Park, Dae Bum Yuk and Jae Sung Lee</font></i></li>
