--- a/invited_abstracts/pustejovsky_abstract.html
+++ b/invited_abstracts/pustejovsky_abstract.html
@@ -27,7 +27,7 @@ href="stylesheets/github-light.css" media="screen">
 
 <h3>Visualizing Meaning: Semantic Simulation of Actions and Events</h3>
 
-To Be Added
+To Appear Soon
 </section>
 
 
