Remove links to accepted papers talks for now, Add links to these papers instead

--- a/index.html
+++ b/index.html
@@ -245,13 +245,13 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
 <a id="accepted-papers" class="anchor" href="#accepted-papers" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 <h2>Accepted Papers<a href="https://www.aclweb.org/anthology/volumes/2020.splu-1/"> (Proceedings)</a></a></h2>
  <ol>
-  <li><b>An Element-wise Visual-enhanced BiLSTM-CRF Model for Location Name Recognition. <a href="https://slideslive.com/38940081">Talk</a>.</b><br><i><font size=2>Takuya Komada and Takashi Inui</font></i></li>
-  <li><b>BERT-based Spatial Information Extraction. <a href="https://slideslive.com/38940078">Talk</a>.</b><br><i><font size=2>Hyeong Jin Shin, Jeong Yeon Park, Dae Bum Yuk and Jae Sung Lee</font></i></li>
-  <li><b>A Cognitively Motivated Approach to Spatial Information Extraction. <a href="https://slideslive.com/38940079">Talk</a>.</b><br><i><font size=2>Chao Xu, Emmanuelle-Anna Dietz Saldanha, Dagmar Gromann and Beihai Zhou</font></i></li>
-  <li><b>They are not all alike: answering different spatial questions requires different grounding strategies. <a href="https://slideslive.com/38940076">Talk</a>.</b><br><i><font size=2>Alberto Testoni, Claudio Greco, Tobias Bianchi, Mauricio Mazuecos, Agata Marcante, Luciana Benotti and Raffaella Bernardi</font></i></li>
-  <li><b>Categorisation, Typicality and Object-Specific Features in Spatial Referring Expressions. <a href="https://slideslive.com/38940077">Talk</a>.</b><br><i><font size=2>Adam Richard-Bollans, Anthony Cohn and Lucía Gómez Álvarez</font></i></li>
-  <li><b>A Hybrid Deep Learning Approach for Spatial Trigger Extraction from Radiology Reports. <a href="https://slideslive.com/38940080">Talk</a>.</b><br><i><font size=2>Surabhi Datta and Kirk Roberts</font></i></li>
-  <li><b>Retouchdown: Releasing Touchdown on StreetLearn as a Public Resource for Language Grounding Tasks in Street View. <a href="https://slideslive.com/38940082">Talk</a>.</b><br><i><font size=2>Harsh Mehta, Yoav Artzi, Jason Baldridge, Eugene Ie and Piotr Mirowski</font></i></li>
+  <li><b>An Element-wise Visual-enhanced BiLSTM-CRF Model for Location Name Recognition. <a href="https://www.aclweb.org/anthology/2020.splu-1.1/">Paper</a>.</b><br><i><font size=2>Takuya Komada and Takashi Inui</font></i></li>
+  <li><b>BERT-based Spatial Information Extraction. <a href="https://www.aclweb.org/anthology/2020.splu-1.2/">Paper</a>.</b><br><i><font size=2>Hyeong Jin Shin, Jeong Yeon Park, Dae Bum Yuk and Jae Sung Lee</font></i></li>
+  <li><b>A Cognitively Motivated Approach to Spatial Information Extraction. <a href="https://www.aclweb.org/anthology/2020.splu-1.3/">Paper</a>.</b><br><i><font size=2>Chao Xu, Emmanuelle-Anna Dietz Saldanha, Dagmar Gromann and Beihai Zhou</font></i></li>
+  <li><b>They are not all alike: answering different spatial questions requires different grounding strategies. <a href="https://www.aclweb.org/anthology/2020.splu-1.4/">Paper</a>.</b><br><i><font size=2>Alberto Testoni, Claudio Greco, Tobias Bianchi, Mauricio Mazuecos, Agata Marcante, Luciana Benotti and Raffaella Bernardi</font></i></li>
+  <li><b>Categorisation, Typicality and Object-Specific Features in Spatial Referring Expressions. <a href="https://www.aclweb.org/anthology/2020.splu-1.5/">Paper</a>.</b><br><i><font size=2>Adam Richard-Bollans, Anthony Cohn and Lucía Gómez Álvarez</font></i></li>
+  <li><b>A Hybrid Deep Learning Approach for Spatial Trigger Extraction from Radiology Reports. <a href="https://www.aclweb.org/anthology/2020.splu-1.6/">Paper</a>.</b><br><i><font size=2>Surabhi Datta and Kirk Roberts</font></i></li>
+  <li><b>Retouchdown: Releasing Touchdown on StreetLearn as a Public Resource for Language Grounding Tasks in Street View. <a href="https://www.aclweb.org/anthology/2020.splu-1.7/">Paper</a>.</b><br><i><font size=2>Harsh Mehta, Yoav Artzi, Jason Baldridge, Eugene Ie and Piotr Mirowski</font></i></li>
  </ol>
 
 
