Remove links to talks for the Findings submissions for now, Add links to their papers

--- a/index.html
+++ b/index.html
@@ -265,14 +265,14 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
 
 <h2>Accepted Findings Submissions</h2>
 <ol start="11">
-  <li><b>Language-Conditioned Feature Pyramids for Visual Selection Tasks. <a href="https://slideslive.com/38940091">Talk</a>.</b><br><i><font size=2>Taichi Iki and Akiko Aizawa</font></i></li>
-<li><b>A Linguistic Analysis of Visually Grounded Dialogues Based on Spatial Expressions. <a href="https://slideslive.com/38940097">Talk</a>.</b><br><i><font size=2>Takuma Udagawa, Takato Yamazaki and Akiko Aizawa</font></i></li>
-<li><b>Visually-Grounded Planning without Vision: Language Models Infer Detailed Plans from High-level Instructions. <a href="https://slideslive.com/38940098">Talk</a>.</b><br><i><font size=2>Peter A. Jansen</font></i></li>
-<li><b>Decoding Language Spatial Relations to 2D Spatial Arrangements. <a href="https://slideslive.com/38940092">Talk</a>.</b><br><i><font size=2>Gorjan Radevski, Guillem Collell, Marie-Francine Moens and Tinne Tuytelaars</font></i></li>
-<li><b>LiMiT: The Literal Motion in Text Dataset. <a href="https://slideslive.com/38940096">Talk</a>.</b><br><i><font size=2>Irene Manotas, Ngoc Phuoc An Vo and Vadim Sheinin</font></i></li>
-<li><b>ARRAMON: A Joint Navigation-Assembly Instruction Interpretation Task in Dynamic Environmentsi. <a href="https://slideslive.com/38940093">Talk</a>.</b><br><i><font size=2>Hyounghun Kim, Abhay Zala, Graham Burri, Hao Tan and Mohit Bansal</font></i></li>
-<li><b>Robust and Interpretable Grounding of Spatial References with Relation Networks. <a href="https://slideslive.com/38940094">Talk</a>.</b><br><i><font size=2>Tsung-Yen Yang, Andrew S. Lan and Karthik Narasimhan</font></i></li>
-<li><b>RMM: A Recursive Mental Model for Dialogue Navigation. <a href="https://slideslive.com/38940095">Talk</a>.</b><br><i><font size=2>Homero Roman Roman, Yonatan Bisk, Jesse Thomason, Asli Celikyilmaz and Jianfeng Gao</font></i></li>
+  <li><b>Language-Conditioned Feature Pyramids for Visual Selection Tasks. <a href="https://www.aclweb.org/anthology/2020.findings-emnlp.420/">Paper</a>.</b><br><i><font size=2>Taichi Iki and Akiko Aizawa</font></i></li>
+<li><b>A Linguistic Analysis of Visually Grounded Dialogues Based on Spatial Expressions. <a href="https://www.aclweb.org/anthology/2020.findings-emnlp.67/">Paper</a>.</b><br><i><font size=2>Takuma Udagawa, Takato Yamazaki and Akiko Aizawa</font></i></li>
+<li><b>Visually-Grounded Planning without Vision: Language Models Infer Detailed Plans from High-level Instructions. <a href="https://www.aclweb.org/anthology/2020.findings-emnlp.395/">Paper</a>.</b><br><i><font size=2>Peter A. Jansen</font></i></li>
+<li><b>Decoding Language Spatial Relations to 2D Spatial Arrangements. <a href="https://www.aclweb.org/anthology/2020.findings-emnlp.408/">Paper</a>.</b><br><i><font size=2>Gorjan Radevski, Guillem Collell, Marie-Francine Moens and Tinne Tuytelaars</font></i></li>
+<li><b>LiMiT: The Literal Motion in Text Dataset. <a href="https://www.aclweb.org/anthology/2020.findings-emnlp.88/">Paper</a>.</b><br><i><font size=2>Irene Manotas, Ngoc Phuoc An Vo and Vadim Sheinin</font></i></li>
+<li><b>ARRAMON: A Joint Navigation-Assembly Instruction Interpretation Task in Dynamic Environmentsi. <a href="https://www.aclweb.org/anthology/2020.findings-emnlp.348/">Paper</a>.</b><br><i><font size=2>Hyounghun Kim, Abhay Zala, Graham Burri, Hao Tan and Mohit Bansal</font></i></li>
+<li><b>Robust and Interpretable Grounding of Spatial References with Relation Networks. <a href="https://www.aclweb.org/anthology/2020.findings-emnlp.172/">Paper</a>.</b><br><i><font size=2>Tsung-Yen Yang, Andrew S. Lan and Karthik Narasimhan</font></i></li>
+<li><b>RMM: A Recursive Mental Model for Dialogue Navigation. <a href="https://www.aclweb.org/anthology/2020.findings-emnlp.157/">Paper</a>.</b><br><i><font size=2>Homero Roman Roman, Yonatan Bisk, Jesse Thomason, Asli Celikyilmaz and Jianfeng Gao</font></i></li>
 </ol>
 
 
