Add James P.'s talk abstract, Update title

--- a/invited_abstracts/pustejovsky_abstract.html
+++ b/invited_abstracts/pustejovsky_abstract.html
@@ -25,9 +25,9 @@ href="stylesheets/github-light.css" media="screen">
 
 <section class="main-content">
 
-<h3>Visualizing Meaning: Semantic Simulation of Actions and Events</h3>
-
-To Appear Soon
+<h3>Visualizing Meaning: Semantic Simulations and Embodiment</h3>
+In this talk, I describe a semantic simulation platform that provides for embodied interactions between humans and computers or robots. 
+This system, VoxWorld, is a multimodal dialogue system enabling communication through language, gesture, action, facial expressions, and gaze tracking, in the context of task-oriented interactions.  A multimodal simulation is an embodied 3D virtual realization of both the situational environment and the co-situated agents, as well as the most salient content denoted by communicative acts in a discourse. VoxWorld enables an embodied HCI  by situating  both human and computational agents within the same virtual simulation environment, where they share perceptual and epistemic common ground.
 </section>
 
 
