Add link for the virtual SpLU event

--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@ href="stylesheets/github-light.css" media="screen">
 <h2  class="project-tagline">In conjunction with The Conference on Empirical Methods in Natural Language Processing 2020 <a href="http://www.wikicfp.com/cfp/program?id=883">(EMNLP 2020)</a>. 
 <br><br>
 Date: November 19, 2020
-<br><br>
+<!--<br><br>
 <a href="https://www.aclweb.org/anthology/volumes/2020.splu-1/"> (Proceedings)</a>
+-->
+<br><br>
+Join the virtual SpLU event <a href="https://virtual.2020.emnlp.org/workshop_WS-10.html"> here</a>.
+<br><br>
+<a href="https://www.aclweb.org/anthology/volumes/2020.splu-1/"> Proceedings</a>
 </h2>
 <br>
 
