Add talks location.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ Date: November 19, 2020
 -->
 <br><br>
 Join the virtual SpLU event <a href="https://virtual.2020.emnlp.org/workshop_WS-10.html"> here</a>.
+<br><br>Please note all the talks will be in Room J (Gather.town).
 <br><br>
 <a href="https://www.aclweb.org/anthology/volumes/2020.splu-1/"> Proceedings</a>
 </h2>
