Add location also under schedule

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
 <a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 
 <a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Schedule (EST)</h2>
+Please note all the talks will be in Room J (Gather.town).<br><br>
 <table class="table" style="width:100%">
       <tr class="info">
         <td>8:00-9:00 AM</td>
