add Zoom link for talks.

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@ Date: November 19, 2020
 -->
 <br><br>
 Join the virtual SpLU event <a href="https://virtual.2020.emnlp.org/workshop_WS-10.html"> here</a>.
-<br><br>Please note all the talks will be in Room J (Gather.town).
-<br><br>
+<br><br>Please note all the talks will be played on Zoom <a href="https://us02web.zoom.us/j/9514624887">here</a>.<br><br>
 <a href="https://www.aclweb.org/anthology/volumes/2020.splu-1/"> Proceedings</a>
 </h2>
 <br>
@@ -136,7 +135,7 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
 <a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 
 <a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Schedule (EST)</h2>
-Please note all the talks will be in Room J (Gather.town).<br><br>
+Please note all the talks will be played on Zoom <a href="https://us02web.zoom.us/j/9514624887">here</a>.<br><br>
 <table class="table" style="width:100%">
       <tr class="info">
         <td>8:00-9:00 AM</td>
